--- a/l14_jest_in_react/package.json
+++ b/l14_jest_in_react/package.json
@@ -85,5 +85,9 @@
     "presets": [
       "react-app"
     ]
+  },
+  "devDependencies": {
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2"
   }
 }
