--- a/l14_jest_in_react/package.json
+++ b/l14_jest_in_react/package.json
@@ -134,8 +134,11 @@
   },
   "devDependencies": {
     "@testing-library/react-hooks": "^3.3.0",
+    "cucumber": "^6.0.5",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
-    "jest-enzyme": "^7.1.2"
+    "jest-cucumber": "^2.0.11",
+    "jest-enzyme": "^7.1.2",
+    "jest-stare": "^2.0.1"
   }
 }
